378 fix - sidepanel padding bottom on firefox

--- a/app/react/Layout/scss/sidepanel.scss
+++ b/app/react/Layout/scss/sidepanel.scss
@@ -150,7 +150,7 @@ $c-sidebar: $c-white;
   z-index: 1;
 }
 
-.sidepanel-footer + .sidepanel-body {
+.sidepanel-footer + .sidepanel-body .view {
   padding-bottom: 75px;
 }
 
